# Squeeze2Diretta

./: CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  SQUEEZELITE.md  install.sh  output_diretta.c  setup-squeezelite.sh  squeeze2diretta-wrapper.cpp  squeezelite-format-header.patch
diretta/: DirettaOutputSimple.h  DirettaRingBuffer.h  DirettaSync.cpp  DirettaSync.h  globals.cpp  globals.h
squeeze2diretta/diretta/: DirettaOutputSimple.cpp  DirettaOutputSimple.h
systemd/: squeeze2diretta.conf  squeeze2diretta.service  start-squeeze2diretta.sh
